plugins/rocks.xml.webhelp/resources/css/topic.css
/* ... */
/* --- Tables END --- */

/* --- Codeblock START --- */
.codeblock {
    font-family: monospace;
    background-color: #f5f5f5;
    color: #333333;
    padding: 0.75em;
}

code, kbd, pre, samp {
    font-family: monospace;
    color: #333333;
}

kbd {
    background-color: #f5f5f5;
}

.codeph{
    font-family: monospace;
    font-size: 0.875em;
    color: #5e5e5e;
}
/* --- Codeblock END --- */

/* --- Figures START --- */
figure {
    display: table;
}

.figure-title {
    caption-side: bottom;
    font-style: italic;
    padding-top: 1rem;
}

figure .table-callouts tbody,
figure .table-callouts tr {
    border: none;
}

figure .table-callouts td {
    padding: 0 0.25rem 0 1em;
    border: none;
}
/* --- Figures END --- */

/* --- Admonitions START --- */
.admonition-table,
.admonition-table > tbody,
.admonition-table > tbody > tr,
.admonition-table > tbody > tr > td {
    border: none;
}

.admonition-table > tbody > tr > td:first-child {
    vertical-align: top;
}

.admonition-icon {
    padding-right: 1.2rem;
    padding-top: 1em;
    max-width: none;
}

.note {
    padding-left: 1rem;
    border-left: 1px #e9e9e9 solid;
}
/* --- Admonitions END --- */

/* --- Related links START --- */
.related-links {
    display: block;
}

.ullinks {
    list-style-type: none;
    padding: 0;
}

.ullink-ahref {
    padding-left: 0;
}

div.linklist,
div.familylinks {
    margin-top: 2em;
}

li.linklist {
    margin: 0.5em 0;
}
/* --- Related links END --- */

/*--- Back to top button START ---*/
#back-to-top-button-container {
    margin: 0 auto;
    position: -webkit-sticky; /* Safari */
    position: sticky;
    bottom: 1rem;
    padding: 0 0.75em;
    height: 5.5rem;
    pointer-events: none;
    z-index: 40;
}

#button-back-to-top {
    position: relative;
    display: none;
    background-color: var(--accent-bg-color);
    margin-left: auto;
    padding: 13px 18px 13px 18px;
    border-radius: 50%;
    margin-bottom: 1.2rem;
    pointer-events: auto;
    box-shadow: 0 0 40px 40px #ffffff;
}
/*--- Back to top button END ---*/

/*--- Unordered Lists START---*/
ul.simple {
    margin-bottom: 0;
}

ul li::marker {
    color: #5E5E5E;
}

.ol li,
.ul li {
    margin-top: 0.5rem;
    margin-bottom: 0.5rem;
    padding: 0;
}

li > .p {
    padding: 0;
    margin:0;
}

/*--- Unordered Lists END---*/

/*--- Parameter Lists START---*/
dd.pd {
    padding-left: 2em;
}

dt.pt {
    font-weight: bolder;
}
/*--- Parameter Lists END---*/

/*--- Sectiontitle START ---*/
.sectiontitle {
    color: #5E5E5E;
    font-size: 1.17em;
    font-weight: bold;
    margin-bottom: 0;
}
/*--- Sectiontitle END ---*/

/*--- Footnotes START---*/
.endnotes {
    margin-top: 1em;
    padding-top: 0.75em;
    border-top: 1px solid #bbbbbb;
}

/*--- Footnotes END---*/

/*--- Keyword START ---*/
.keyword{
    color: #333333;
}
/*--- Keyword END ---*/

/*--- Parmname START ---*/
.parmname{
    font-weight: 400;
}
/*--- Parmname END ---*/

/*--- Lines START---*/
.lines {
    padding-left: 2em;
}
/*--- Lines END---*/

/*--- q/lq START---*/
.q{
    font-style: italic;
}

.lq{
    font-style: italic;
    padding-left: 30px;
}
/*--- q/lq END---*/

/*--- Command name START---*/
.cmdname{
    font-family: monospace;
    font-weight: bold;
}
/*--- Command name END---*/


/*--- Message phrase  START---*/
.msgph{
    font-family: monospace;
    font-size: 0.875em;
}
/*--- Message phrase  END---*/

/*--- System output  START---*/
.systemoutput{
    font-family: monospace;
    font-size: 0.875em;
    background-color: #F5F5F5;
}
/*--- System output  END---*/

/*--- Menucascade  START---*/
abbr[title] {
    text-decoration: none;
    font-weight: bold;
    cursor: help;
    text-decoration-skip-ink: none;
}

.uicontrol {
    font-weight: bold;
    cursor: help;
}
/*--- Menucascade  END---*/

/*--- Option  START---*/
.option{
    font-family: monospace;
    font-size: 0.875em;
}
/*--- Option  END---*/

/*--- Parameter name  START---*/
.parmname{
    font-family: monospace;
    font-size: 0.875em;
}
/*--- Parameter name  END---*/

/*--- Syntax phrase  START---*/
.synph{
    font-family: monospace;
    font-size: 0.875em;
}
/*--- Syntax phrase  END---*/

/*--- Apiname  START---*/
.apiname{
    font-family: monospace;
    font-size: 0.875em;
}
/*--- Apiname  END---*/

/*--- Message block  START---*/
.msgblock{
    font-family: monospace;
    font-size: 0.875em;
}
/*--- Message block  END---*/

/*--- Preformatted text  START---*/
.pre{
    font-family: monospace;
    font-size: 0.875em;
}
/*--- Preformatted text  END---*/

/*--- Screen  START---*/
.screen{
    font-family: monospace;
    font-size: 0.875em;
    background-color: #F5F5F5;
}
/*--- Screen  END---*/

/*--- Substepexpand START---*/
.substepexpand {
    margin: 0;
}
/*--- Substepexpand END---*/

/*--- Image START---*/
article img {
    max-width: 100%;
}

figure.fig {
    display: block;
    margin: 0;
}

figure.fig .image {
    display: block;
    padding-top: 16px;
}

.imageleft {
    margin-right: auto;
}

.imagecenter {
    margin: auto;
}

.imageright {
    margin-left: auto;
}

/*--- Image END---*/

/*--- Definition Lists START---*/
dd {
    padding-left: 2em;
}

/*--- Definition Lists END---*/

button, input, optgroup, select, textarea {
    margin: 0;
    font-family: inherit;
    font-size: inherit;
    line-height: inherit;
    border: none;
    padding-bottom: 0.4em;
    background: none;
}

/*--- Download PDF START---*/
.k-pdf-export h1.title {
    color: #333333;
}

.k-pdf-export article {
    color: #5E5E5E;
    font-weight: normal;
}

.non-displayed {
    display: none;
}
/*--- Download PDF END---*/

/*--- Syntaxdiagram START---*/
.syntaxdiagram{
    color: inherit;
}
/*--- Syntaxdiagram END---*/

